tests/NormalTests/paczka1/fuzzy1/86481511.err
Error in line 3: MSsW A485 91,8
Error in line 7: F67q1s S804 0,0
Error in line 2: S804 S868 84,1
Error in line 23: PINvxm A485 43,2
Error in line 9: F67q1s A700 80,2
Error in line 29: F67q1s S804 32,6
Error in line 38: F67q1s S868 39,5
